--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    <body>
       <header>
          <h1 id="name">Francis Florence S. Cagatin</h1>
-         <img src="profile.jpeg" alt="Profile Picture" id="profile-img">
+         <img src="profile.JPG" alt="Profile Picture" id="profile-img">
          <p id="course-year">Computer Science - 2nd</p>
          <button id="theme-toggle">Switch Theme</button>
       </header>
