--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <header>
          <h1 id="name">Francis Florence S. Cagatin</h1>
          <img src="profile.jpg" alt="Profile Picture" id="profile-img">
-         <p id="course-year">Computer Science - 2nd</p>
+         <p id="course-year">Computer Science - 2nd year</p>
          <button id="theme-toggle">Switch Theme</button>
       </header>
       <section id="achievements">
