--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
          <h1 id="name">Francis Florence S. Cagatin</h1>
          <img src="profile.jpg" alt="Profile Picture" id="profile-img">
          <p id="course-year">BS Computer Science | 2nd Year</p>
+         <p id="email">ffcagatin@mcm.edu.ph</p>
          <button id="theme-toggle">☾</button>
       </header>
       <section id="achievements">
