--- a/index.html
+++ b/index.html
@@ -36,6 +36,16 @@
          </ul>
       </section>
 
+      <section id="assessments">
+         <h2>Course Assessments</h2>
+         <ul>
+            <li>
+               <a href="https://ffcagatin.github.io/FreshSense/landingpage" target="_blank" class="ca-link">
+                  FreshSense Landing Page
+               </a>
+         </ul>
+      </section>
+
       <div id="viewer" class="viewer">
          <img id="viewer-img" src="" alt="Full view">
       </div>
